<resources>
    <string name="app_name">EyeCare</string>
    <string name="hello">Hello</string>
    <string name="pian">Pian</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>1
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="search_elements">Search Elements</string>
    <string name="search">Search</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="informasi_penyakit">Informasi Penyakit</string>
    <string name="petunjuk_pengguna">Petunjuk Pengguna</string>
    <string name="diagnosa_penyakit">Diagnosa Penyakit</string>
    <string name="trending">Trending</string>
    <string name="nav_home">home</string>
    <string name="nav_favorit">favorit</string>
    <string name="nav_account">account</string>
    <string name="nav_settings">settings</string>
    <string name="profile">profile</string>
    <string name="riwayat_diagnosa">Riwayat Diagnosa</string>
    <string name="title_activity_verify">VerifyActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="gejala">Berdasarkan gejala yang dipilih, Anda mengalami</string>
    <string name="check">Cek Ulang Diagnosa</string>
    <string name="menu_utama">Menu Utama</string>
    <string name="diagnosa">Diagnosa</string>
    <string name="keluar_cairan_dari_hidung">Keluar Cairan Dari Hidung</string>
    <string name="name">nama</string>
    <string name="description">deskripsi</string>
    <string-array name="data_name">
        <item>Salesma</item>
        <item>Diare</item>
        <item>Diare (Jamur)</item>
        <item>Diare (Bakteri</item>
        <item>Flu Hamster</item>
        <item>Ekor Basah</item>
        <item>Sembelit</item>
        <item>Batu Ginjal</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">\n</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="pradiagnose_txt">Sebelum memulai diagnosa, kami ingin menekankan bahwa kesehatan mata Anda sangat penting bagi kami. Jika Anda mengalami gejala yang tidak biasa atau merasa khawatir dengan kondisi mata Anda, sangat kami sarankan untuk segera berkonsultasi dengan dokter spesialis mata yang berpengalaman. Dokter mata akan dapat memberikan diagnosis yang akurat dan perawatan yang sesuai dengan kebutuhan mata Anda.</string>
    <string name="pradiagnose_ii_txt">Untuk membantu dalam proses diagnosa awal, silakan ceklis atau pilih gejala yang Anda alami dari daftar yang disediakan. Pilihlah gejala dengan hati-hati dan jujurlah dalam memilih gejala yang relevan dengan kondisi mata Anda.</string>
    <string name="pradiagnose_iii_txt">Setelah Anda memilih gejala-gejala yang relevan, tekan tombol \'Cek Diagnosa\' untuk melihat hasil diagnosa.</string>
    <string name="mulai_diagnosa">Apakah Anda ingin memulai diagnosa sekarang?</string>
    <string name="title_diagnosa">Diagnosa</string>
    <string name="text_btn_diagnosa">Mulai Diagnosa</string>
    <string name="petunjuk_penggunaan">Petunjuk Penggunaan</string>
    <string name="langkah_langkah_untuk_menggunakan_aplikasi_ini">Langkah-langkah untuk menggunakan aplikasi ini:</string>
    <string name="point_petunjuk_1">1. Diagnosa Penyakit Mata: Klik tombol ini untuk memulai proses diagnosa penyakit mata berdasarkan gejala yang Anda alami.</string>
    <string name="point_petunjuk_2">2. Informasi Penyakit Mata: Klik tombol ini untuk mengetahui informasi lebih lanjut tentang berbagai jenis penyakit mata yang umum terjadi.</string>
    <string name="point_petunjuk_3">3. Riwayat Diagnosa: Klik tombol ini untuk melihat riwayat diagnosa penyakit mata sebelumnya yang telah Anda lakukan.</string>
    <string name="point_petunjuk_4">4. Petunjuk Penggunaan: Klik tombol ini untuk membaca petunjuk penggunaan aplikasi secara lengkap.</string>
    <string name="point_petunjuk_5">5. Informasi Aplikasi: Klik tombol \'Informasi Aplikasi\' pada bottom navigation untuk membaca informasi mengenai aplikasi ini, termasuk tujuan, pengembang, dan versi aplikasi.</string>
    <string name="point_petunjuk_6">6. Logout: Klik tombol ini untuk keluar dari akun Anda dan kembali ke halaman login.</string>
    <string name="catatan">Catatan:</string>
    <string name="isi_catatan_1">Aplikasi ini hanya sebagai panduan awal untuk membantu Anda dalam melakukan diagnosa penyakit mata. Namun, hasil yang diberikan tidak dapat menggantikan diagnosa dari seorang dokter mata yang berkualifikasi. Jika Anda mengalami masalah kesehatan mata yang serius atau gejala yang tidak membaik, segera konsultasikan dengan dokter mata.</string>
    <string name="isi_catatan_2">Terima kasih telah menggunakan Aplikasi Sistem Pakar Diagnosa Penyakit Mata. Semoga aplikasi ini dapat memberikan informasi yang berguna untuk merawat kesehatan mata Anda dengan lebih baik.</string>
    <string name="welcome_pradiagnose">Selamat datang di Aplikasi Sistem Pakar untuk Diagnosa Penyakit Mata!</string>
    <string name="nama_penyakit">Nama Penyakit</string>
</resources>