<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_page_ii"
    tools:context=".view.guide.GuideFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header_background_ii">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/petunjuk_penggunaan"
                    android:textColor="@color/White"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Petunjuk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/langkah_langkah_untuk_menggunakan_aplikasi_ini"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:justificationMode="inter_word"
                android:text="@string/point_petunjuk_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:justificationMode="inter_word"
                android:text="@string/point_petunjuk_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/point_petunjuk_3"
                android:justificationMode="inter_word" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:textSize="12sp"
                android:text="@string/point_petunjuk_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:textSize="12sp"
                android:text="@string/point_petunjuk_5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:textSize="12sp"
                android:text="@string/point_petunjuk_6" />

        </LinearLayout>

        <TextView
            android:id="@+id/instruction_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/catatan"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instruction_note_content"
            android:layout_width="match_parent"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="8dp"
            android:justificationMode="inter_word"
            android:text="@string/isi_catatan_1" />

        <TextView
            android:id="@+id/thank_you_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="16dp"
            android:justificationMode="inter_word"
            android:text="@string/isi_catatan_2"
            android:textStyle="italic" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
